2010-03-12  Anthony Green  <green@moxielogic.com>

	* .gitmodules: Use read-only submodules for anonymous checkouts.

2010-02-25  Anthony Green  <green@moxielogic.com>

	* build.xml: Create root/usr/bin prior to running build system
	sanity checks.

2010-02-20  Anthony Green  <green@moxielogic.com>

	* scripts/moxielogic-repo/RPM-GPG-KEY-MoxieLogic: New file.
	* scripts/moxielogic-repo/moxielogic-repo.spec: New file.
	* scripts/moxielogic-repo/Moxie_Logic.repo: New file.

2010-02-03  Anthony Green  <green@moxielogic.com>

	* README: Update copyright year.

2010-02-02  Anthony Green  <green@moxielogic.com>

	* HACKING: Update directory definitions and mention ant PATH
	problem.  Also document package signing process.

2010-02-01  Anthony Green  <green@moxielogic.com>

	* scripts/moxie-elf-gdb.spec.in (%files): Install new files.

2010-01-31  Anthony Green  <green@moxielogic.com>

	* scripts/moxie-elf-qemu.spec.in (CFLAGS): Disable -Werror.

	* scripts/moxie-elf-gdb.spec.in (BuildRequires): Add dtc.

	* scripts/moxie-elf-newlib.spec.in: Remove BuildArch noarch
	because rpmbuild is complaining about arch dependent files in a
	noarch package.  Bug in rpmbuild?

2010-01-30  Anthony Green  <green@moxielogic.com>

	* scripts/mkrpms.sh (TARGET): Build rpms using Fedora 12 mock
	environment.

	* scripts/moxie-elf-gcc.spec.in: BuildRequire gmp-devel mpfr-devel
	libmpc-devel and zlib-devel.

2010-01-29  Anthony Green  <green@moxielogic.com>

	* build.xml: Run scripts/precheck/check-submodules and
	scripts/precheck/check-path before every build.
	* scripts/precheck/check-path: New file.
	* scripts/precheck/check-submodules: New file.

2010-01-04  Anthony Green  <green@moxielogic.com>

	* scripts/daily-build.sh: New file.

2009-12-05  Anthony Green  <green@moxielogic.com>

	* build.xml: Set path for make install of binutils so we pick up
	dtc.
	* gcc/cloog-ppl, gcc/gmp, gcc/mpfr, gcc/ppl: Deleted.

2009-10-13  Anthony Green  <green@moxielogic.com>
